<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="playlist_maker" translatable="false">Playlist maker</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="blackTheme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="userAgreement">Пользовательское соглашение</string>
    <string name="supportMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="supportSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="userAgreementPath" translatable="false">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="email" translatable="false">romashinpv@gmail.com</string>
    <string name="shareLink" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="input_hint">Поиск</string>
    <string name="track_text">Загрузка</string>
    <string name="start_null" translatable="false">00:00</string>
    <string name="update">Обновить</string>
    <string name="notFound">Ничего не нашлось</string>
    <string name="networkError">Проблемы со связью
        \n\n
        Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="youWereSearched">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="trackLength">Длительность</string>
    <string name="album">Альбом</string>
    <string name="releaseYear">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
 </resources>