<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="16dp"
            android:paddingTop="14dp"
            android:text="@string/playlist_maker"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingVertical="40dp"
        android:paddingStart="17dp"
        android:paddingEnd="15dp"
        android:paddingBottom="28dp">


        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/buttonTextColor"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/buttonTextColor"

            />

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/library"
            android:textColor="@color/buttonTextColor"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/buttonTextColor" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/buttonTextColor"
            android:textSize="22sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/buttonTextColor" />
    </LinearLayout>
</LinearLayout> 